--- a/akka-streams-kafka/consumer/src/main/resources/application.conf
+++ b/akka-streams-kafka/consumer/src/main/resources/application.conf
@@ -1,7 +1,8 @@
 consumer-id = "akka-streams-consumer"
 group-id = "akka-streams-consumer"
-bootstrap-servers = "kafka:9092"
+bootstrap-servers = "localhost:29092"
 topic = "akka-streams-topic"
 enable-auto-commit = "true"
 auto-commit-interval-ms = "1000"
 auto-offset-reset = "earliest"
+client-id = "akka-streams-consumer"
