--- a/java-starter/producer/pom.xml
+++ b/java-starter/producer/pom.xml
@@ -6,16 +6,44 @@
     <artifactId>basic-producer</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
+    <developers>
+        <developer>
+            <id>chris</id>
+            <name>Chris Searle</name>
+            <email>chris@chrissearle.org</email>
+            <url>https://chrissearle.org/</url>
+            <roles>
+                <role>developer</role>
+            </roles>
+            <timezone>Europe/Oslo</timezone>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git@github.com:chrissearle/kafka-java-to-scala.git</connection>
+        <developerConnection>scm:git:git@github.com:chrissearle/kafka-java-to-scala.git</developerConnection>
+        <url>https://github.com/chrissearle/kafka-java-to-scala</url>
+        <tag>master</tag>
+    </scm>
 
     <dependencies>
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
-            <version>2.3.0</version>
+            <version>2.4.0</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <release>11</release>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
