--- a/java-starter/consumer/pom.xml
+++ b/java-starter/consumer/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>net.chrissearle.kafka</groupId>
-    <artifactId>basic-producer</artifactId>
+    <artifactId>basic-consumer</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <developers>
@@ -33,7 +33,6 @@
             <version>2.4.0</version>
         </dependency>
     </dependencies>
-
 
     <build>
         <plugins>
